--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     /* ... (vorheriger Code) ... */
 
     /* Stildefinitionen für das Menüband oben */
+  .top-banner {
+      background-image: url("hintergrundbild.jpg");
+      background-size: cover;
+      height: 200px;
+      text-align: center;
+      line-height: 200px;
+      color: #fff;
+    }
+
     .menu-bar-top {
   background-color: #00008B; /* Dunkles Blau */
   color: #fff;
