--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     /* Stildefinitionen für das Menüband oben */
   .top-banner {
-      background-image: url("https://github.com/LPAlexi/Webseite/blob/%23Banner/Gl%C3%B6rtal_SperreBanner.jpg");
+      background-image: url("Glörtal_SperreBanner.jpg");
       background-size: cover;
       height: 200px;
       text-align: center;
