--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     /* Stildefinitionen für das Menüband oben */
     .top-banner {
-      background-image: url("https://github.com/LPAlexi/Webseite/raw/master/Glörtal_SperreBanner.jpg");
+      background-image: url("https://github.com/LPAlexi/Webseite/raw/master/sperrebanner.jpg");
       background-size: cover;
       height: 200px;
       text-align: center;
