--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     /* Stildefinitionen für das Menüband oben */
     .top-banner {
-      background-image: url("https://github.com/LPAlexi/Webseite/raw/master/sperrebanner.jpg");
+      background-image: url('LPALexi/sperrebanner.jpg');
       background-size: cover;
       height: 200px;
       text-align: center;
@@ -193,12 +193,12 @@
   <script>
     // Beispielbilder und Sortierfunktion
     const images = [
-      { src: 'O:\Bilder\Fotos\DSC_0012.NEF' },
+      { src: 'LPALexi/DSC_0012.NEF' },
       { src: 'bild2.jpg' },
       { src: 'bild3.jpg' },
       { src: 'bild4.jpg' },
       { src: 'bild5.jpg' },
-      { src: 'O:\Bilder\Fotos\DSC_0045.jpg' },
+      { src: 'LPALexi/DSC_0045.jpg' },
       { src: 'bild7.jpg' },
       { src: 'bild8.jpg' },
       { src: 'bild9.jpg' },
@@ -209,14 +209,14 @@
       { src: 'bild14.jpg' },
       { src: 'bild15.jpg' },
       { src: 'bild16.jpg' },
-      { src: 'O:\Bilder\Fotos\DSC_0045.jpg' },
+      { src: 'LPALexi/DSC_0045.jpg' },
       { src: 'bild18.jpg' },
       { src: 'bild19.jpg' },
-      { src: 'O:\Webseite\LPAlexi\DSC_0062.jpg' },
-      { src: 'O:\Webseite\LPAlexi\DSC_0062.jpg' },
-      { src: 'O:\Webseite\LPAlexi\DSC_0062.jpg' },
-      { src: 'O:\Webseite\LPAlexi\DSC_0062.jpg' },
-      { src: 'DSC_0021.jpg' },
+      { src: 'LPALexi/DSC_0062.jpg' },
+      { src: 'LPALexi/DSC_0062.jpg' },
+      { src: 'LPALexi/DSC_0062.jpg' },
+      { src: 'LPALexi/DSC_0062.jpg' },
+      { src: 'LPALexi/DSC_0021.jpg' },
       { src: 'LPAlexi/DSC_0045.jpg' }
     ];
 
