--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     /* Stildefinitionen für das Menüband oben */
     .top-banner {
-      background-image: url('LPALexi/sperrebanner.jpg');
+      background-image: url('https://github.com/LPAlexi/Webseite/blob/%23Banner/sperrebanner.jpg?raw=true');
       background-size: cover;
       height: 200px;
       text-align: center;
